--- a/apps/customer-site/package.json
+++ b/apps/customer-site/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@next/font": "^14.2.15",
+    "@supabase/supabase-js": "^2.56.0",
+    "date-fns": "^4.1.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
