--- a/apps/customer-site/package.json
+++ b/apps/customer-site/package.json
@@ -15,7 +15,10 @@
     "date-fns": "^4.1.0",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-date-picker": "^12.0.1",
+    "react-day-picker": "^9.9.0",
+    "react-dom": "19.1.0",
+    "react-multi-date-picker": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
