--- a/apps/customer-site/package.json
+++ b/apps/customer-site/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.56.0",
     "date-fns": "^4.1.0",
     "next": "15.4.5",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-date-picker": "^12.0.1",
     "react-day-picker": "^9.9.0",
