--- a/apps/customer-site/package.json
+++ b/apps/customer-site/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^14.2.15",
     "@supabase/supabase-js": "^2.56.0",
     "date-fns": "^4.1.0",
+    "iran-city": "^1.2.2",
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
